# cameraL

./: settings.gradle
camera/: CMakeLists.txt  README.md  build.gradle
camera/libs/: FastVideo-release.aar
camera/libs/include/libavutil/: ffversion.h
camera/src/main/: AndroidManifest.xml
camera/src/main/assets/: build_ndk17.sh  build_ndk21.sh  lup.h264
camera/src/main/cpp/: native-lib.cpp
camera/src/main/java/com/decoder/ling/: H264Decoder.java
camera/src/main/java/com/decoder/xiaomi/: H264Decoder.java
camera/src/main/java/com/example/camera/: MainActivity.java
camera/src/main/java/com/example/ffmpeg_yuv/: MainActivity.java
camera/src/main/java/com/ling/camera/: ReadH264FileThread.java  VideoViewGl.java
camera/src/main/java/com/ling/utils/: H264FileUtils.java
camera/src/main/java/com/ling/video/: AndroidH264DecoderUtil.java  ColorSpaceMatrix.java  CustomChooseConfig.java  Filter.java  GlslFilter.java  HardDecodeExceptionCallback.java  IOUtils.java  Param.java  Photo.java  PhotoView.java  RendererUtils.java  VideoFrame.java  VideoGlSurfaceView.java  VideoGlSurfaceViewFFMPEG.java  VideoGlSurfaceViewFactory.java  VideoGlSurfaceViewGPU.java  VideoGlSurfaceViewGPULollipop.java  VideoGlSurfaceViewGPULollipop2.java  WorkThread.java  YUVFilter.java
camera/src/main/java/com/sona/readFileDecode/: AACDecoderUtil.java  AACFileDecoderActivity.java  AudioRecordThread.java  H264FileDecodeActivity.java  MediaCodecUtil.java  MyAudioTrack.java  ReadAACFileThread.java  ReadH264FileThread.java
camera/src/main/java/com/sona/test/: MainActivity.java
camera/src/main/res/layout/: activity_main.xml
camera/src/main/res/values/: themes.xml
camera/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
